--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@okta/okta-signin-widget": "^5.1.5",
     "bootstrap": "^5.0.0-beta1",
     "font-awesome": "^4.7.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
